--- a/data/ui/ButtonDialog.ui
+++ b/data/ui/ButtonDialog.ui
@@ -106,6 +106,7 @@
                                         <property name="can_focus">False</property>
                                         <property name="halign">start</property>
                                         <property name="label" translatable="yes">Send keystroke</property>
+                                        <property name="track_visited_links">False</property>
                                       </object>
                                       <packing>
                                         <property name="expand">False</property>
