ButtonDialog: fix the tooltip for the macro row

--- a/data/ui/ButtonDialog.ui
+++ b/data/ui/ButtonDialog.ui
@@ -69,7 +69,7 @@
                                 <property name="width_request">100</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="tooltip_text" translatable="yes">Add a new resolution to the profile</property>
+                                <property name="tooltip_text" translatable="yes">Capture a macro for this button</property>
                                 <child>
                                   <object class="GtkBox">
                                     <property name="visible">True</property>
