--- a/data/ui/ButtonDialog.ui
+++ b/data/ui/ButtonDialog.ui
@@ -104,6 +104,8 @@
                                         <property name="tooltip_text" translatable="yes">The currently set macro</property>
                                         <property name="margin_left">10</property>
                                         <property name="label" translatable="yes">None</property>
+                                        <property name="wrap">True</property>
+                                        <property name="max_width_chars">50</property>
                                         <property name="track_visited_links">False</property>
                                         <attributes>
                                           <attribute name="weight" value="bold"/>
@@ -183,6 +185,9 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">None</property>
+                    <property name="wrap">True</property>
+                    <property name="max_width_chars">30</property>
+                    <property name="justify">center</property>
                     <property name="track_visited_links">False</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
