--- a/data/ui/ResolutionRow.ui
+++ b/data/ui/ResolutionRow.ui
@@ -62,7 +62,7 @@
               <object class="GtkLabel" id="active_label">
                 <property name="can_focus">False</property>
                 <property name="halign">end</property>
-                <property name="label" translatable="yes">Active</property>
+                <property name="label" translatable="yes" comments="Translators: this is used to indicate the active resolution.">Active</property>
                 <property name="justify">right</property>
                 <property name="track_visited_links">False</property>
               </object>
