--- a/data/ui/ResolutionsPage.ui
+++ b/data/ui/ResolutionsPage.ui
@@ -40,7 +40,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="halign">end</property>
-                        <property name="label" translatable="yes">Report rate</property>
+                        <property name="label" translatable="yes" comments="Translators: the rate at which the device reports movement.">Report rate</property>
                         <property name="justify">right</property>
                         <property name="track_visited_links">False</property>
                         <style>
@@ -122,7 +122,7 @@
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Sensitivity</property>
+                <property name="label" translatable="yes" comments="Translators: the sensitivity of the device's sensor.">Sensitivity</property>
                 <property name="track_visited_links">False</property>
                 <attributes>
                   <attribute name="weight" value="bold"/>
