--- a/data/ui/ErrorPerspective.ui
+++ b/data/ui/ErrorPerspective.ui
@@ -66,7 +66,7 @@
   <object class="GtkHeaderBar" id="_titlebar">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="title">Uh Oh! Something went wrong...</property>
+    <property name="title" translatable="yes">Uh Oh! Something went wrong...</property>
     <property name="has_subtitle">False</property>
     <child>
       <object class="GtkButton">
