--- a/data/ui/WelcomePerspective.ui
+++ b/data/ui/WelcomePerspective.ui
@@ -116,7 +116,7 @@
   <object class="GtkHeaderBar" id="_titlebar">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="title">Select a Device</property>
+    <property name="title" translatable="yes">Select a Device</property>
     <property name="has_subtitle">False</property>
     <child>
       <object class="GtkButton">
