--- a/data/ui/LedDialog.ui
+++ b/data/ui/LedDialog.ui
@@ -360,10 +360,10 @@
                 <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkImage">
+                  <object class="GtkImage" id="led_off_image">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="stock">gtk-missing-image</property>
+                     <property name="resource">/org/freedesktop/Piper/led-off.svg</property>
                   </object>
                   <packing>
                     <property name="expand">True</property>
@@ -378,6 +378,8 @@
                     <property name="label" translatable="yes">This LED is off</property>
                     <property name="justify">center</property>
                     <property name="track_visited_links">False</property>
+                    <property name="margin_top">10</property>
+                    <property name="margin_bottom">5</property>
                   </object>
                   <packing>
                     <property name="expand">True</property>
