--- a/data/ui/LedDialog.ui
+++ b/data/ui/LedDialog.ui
@@ -7,11 +7,11 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkAdjustment" id="adjustment_effect_rate">
-    <property name="lower">100</property>
-    <property name="upper">20000</property>
-    <property name="step_increment">50</property>
-    <property name="page_increment">50</property>
+  <object class="GtkAdjustment" id="adjustment_effect_duration">
+    <property name="lower">0</property>
+    <property name="upper">10000</property>
+    <property name="step_increment">100</property>
+    <property name="page_increment">500</property>
   </object>
   <template class="LedDialog" parent="GtkDialog">
     <property name="width_request">400</property>
@@ -132,11 +132,12 @@
                               <object class="GtkScale">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="tooltip_text" translatable="yes">Choose an effect rate for the LED</property>
-                                <property name="adjustment">adjustment_effect_rate</property>
+                                <property name="tooltip_text" translatable="yes">Choose an effect duration for the LED</property>
+                                <property name="adjustment">adjustment_effect_duration</property>
                                 <property name="round_digits">0</property>
                                 <property name="digits">0</property>
                                 <property name="value_pos">right</property>
+                                <signal name="change-value" handler="_on_change_value" swapped="no"/>
                               </object>
                               <packing>
                                 <property name="expand">True</property>
@@ -149,7 +150,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="halign">end</property>
-                                <property name="label" translatable="yes">Hz</property>
+                                <property name="label" translatable="yes">ms</property>
                                 <property name="justify">right</property>
                                 <property name="track_visited_links">False</property>
                                 <style>
@@ -171,7 +172,7 @@
                       <object class="GtkLabel">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">Effect rate</property>
+                        <property name="label" translatable="yes">Effect duration</property>
                         <property name="track_visited_links">False</property>
                       </object>
                     </child>
@@ -297,11 +298,12 @@
                               <object class="GtkScale">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="tooltip_text" translatable="yes">Choose an effect rate for the LED</property>
-                                <property name="adjustment">adjustment_effect_rate</property>
+                                <property name="tooltip_text" translatable="yes">Choose an effect duration for the LED</property>
+                                <property name="adjustment">adjustment_effect_duration</property>
                                 <property name="round_digits">0</property>
                                 <property name="digits">0</property>
                                 <property name="value_pos">right</property>
+                                <signal name="change-value" handler="_on_change_value" swapped="no"/>
                               </object>
                               <packing>
                                 <property name="expand">True</property>
@@ -314,7 +316,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="halign">end</property>
-                                <property name="label" translatable="yes">Hz</property>
+                                <property name="label" translatable="yes">ms</property>
                                 <property name="justify">right</property>
                                 <property name="track_visited_links">False</property>
                                 <style>
@@ -336,7 +338,7 @@
                       <object class="GtkLabel">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">Effect rate</property>
+                        <property name="label" translatable="yes">Effect duration</property>
                         <property name="track_visited_links">False</property>
                       </object>
                     </child>
@@ -363,7 +365,7 @@
                   <object class="GtkImage" id="led_off_image">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                     <property name="resource">/org/freedesktop/Piper/led-off.svg</property>
+                    <property name="resource">/org/freedesktop/Piper/led-off.svg</property>
                   </object>
                   <packing>
                     <property name="expand">True</property>
