--- a/data/ui/Window.ui
+++ b/data/ui/Window.ui
@@ -2,6 +2,12 @@
 <!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
+  <menu id="primary_menu">
+    <item>
+      <attribute name="action">app.about</attribute>
+      <attribute name="label" translatable="yes">_About Piper</attribute>
+    </item>
+  </menu>
   <template class="Window" parent="GtkApplicationWindow">
     <!-- This size is determined to be the best one with the current set of
 	 device SVGs in libratbag. It is set to ensure that the jump in size
