--- a/data/ui/MousePerspective.ui
+++ b/data/ui/MousePerspective.ui
@@ -20,7 +20,7 @@
       </packing>
     </child>
     <child type="overlay">
-      <object class="GtkRevealer" id="notification_commit">
+      <object class="GtkRevealer" id="notification_error">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="halign">center</property>
@@ -36,14 +36,13 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <child>
-                  <object class="GtkLabel" id="notification_commit_label">
+                  <object class="GtkLabel" id="notification_error_label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="margin_right">30</property>
                     <property name="margin_end">30</property>
-                    <property name="label" translatable="yes">Failed to commit changes to the device</property>
+                    <property name="label" translatable="yes">Something went wrong. The device has been reset to a previous state.</property>
                     <property name="ellipsize">middle</property>
-                    <property name="max_width_chars">50</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -52,13 +51,13 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton" id="notification_commit_close">
+                  <object class="GtkButton" id="notification_error_close">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="focus_on_click">False</property>
                     <property name="receives_default">True</property>
                     <property name="relief">none</property>
-                    <signal name="clicked" handler="_on_notification_commit_close_clicked" swapped="no"/>
+                    <signal name="clicked" handler="_on_notification_error_close_clicked" swapped="no"/>
                     <child>
                       <object class="GtkImage">
                         <property name="visible">True</property>
