--- a/data/ui/LedDialog.ui
+++ b/data/ui/LedDialog.ui
@@ -81,7 +81,7 @@
                       <object class="GtkAlignment">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="left-padding">12</property>
+                        <property name="margin-start">12</property>
                         <child>
                           <object class="GtkScale">
                             <property name="visible">True</property>
@@ -121,7 +121,7 @@
                       <object class="GtkAlignment">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="left-padding">12</property>
+                        <property name="margin-start">12</property>
                         <child>
                           <object class="GtkBox">
                             <property name="visible">True</property>
@@ -248,7 +248,7 @@
                       <object class="GtkAlignment">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="left-padding">12</property>
+                        <property name="margin-start">12</property>
                         <child>
                           <object class="GtkScale">
                             <property name="visible">True</property>
@@ -287,7 +287,7 @@
                       <object class="GtkAlignment">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="left-padding">12</property>
+                        <property name="margin-start">12</property>
                         <child>
                           <object class="GtkBox">
                             <property name="visible">True</property>
