--- a/data/ui/ResolutionsPage.ui
+++ b/data/ui/ResolutionsPage.ui
@@ -25,10 +25,10 @@
               <object class="GtkAlignment">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="top-padding">12</property>
-                <property name="bottom-padding">12</property>
-                <property name="left-padding">12</property>
-                <property name="right-padding">12</property>
+                <property name="margin-start">12</property>
+                <property name="margin-end">12</property>
+                <property name="margin-top">12</property>
+                <property name="margin-bottom">12</property>
                 <child>
                   <object class="GtkBox">
                     <property name="visible">True</property>
@@ -177,10 +177,10 @@
               <object class="GtkAlignment">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="top-padding">12</property>
-                <property name="bottom-padding">12</property>
-                <property name="left-padding">12</property>
-                <property name="right-padding">12</property>
+                <property name="margin-start">12</property>
+                <property name="margin-end">12</property>
+                <property name="margin-top">12</property>
+                <property name="margin-bottom">12</property>
                 <child>
                   <object class="GtkScrolledWindow">
                     <property name="visible">True</property>
